# MSPM0_FreeRTOS_Template

./: .clang-format  CMakeLists.txt  README.md  TI板子相关需求.xls  mspm0g350x_base.cmake  run_syscfg_main.bat
Core/Src/: main.c
Flash/: JLink_flash.bat  daplink.cfg
FreeRTOS/: tasks.c
Main/: main.c  main.cpp  main.hpp  sysmem.c
SysConfig/: MSPM0_FreeRTOS_Template.syscfg  run_syscfg_main.bat  ti_msp_dl_config.c  ti_msp_dl_config.h
User/App/: api_main.cpp  api_main.h
User/Bsp/: bsp_usart.cpp  bsp_usart.h
